🔧chore: configuração de ambiente scss e variaveis de cores, fontes e tamanhos

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,5 @@
-// resources/sass/_variables.scss
+$body-bg: #f8fafc;
 
-// 1. Your brand colors
 $blue-avelar: #2A55A3;
 $orange-avelar: #F58634;
 $pink-custom: #ff69b4;
@@ -11,3 +10,5 @@ $success: #198754;
 
 $font-family-sans-serif: 'Nunito', sans-serif;
 $border-radius: 0.5rem;
+$font-size-base: 1rem;
+$line-height-base: 1.6;
